@@ -2,6 +2,8 @@
 
 Changes with Apache 2.3.8
 
+  *) mod_proxy: Rename erroronstatus to failonstatus.
+     [Daniel Ruggeri <DRuggeri primary.net>]
 
 Changes with Apache 2.3.7
 
